sign up gap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,7 +169,7 @@ textarea {
   margin-bottom: 0.5%;
   padding: 5%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width:35%;
+  width:auto;
 }
 
 
